--- a/g1.html
+++ b/g1.html
@@ -32,7 +32,7 @@
       <ul class="listagem-pokemon">
         <li class="cartao-pokemon bggrama">
             <div class="informacoes">
-                <a href="https://pokedex-br.fandom.com/pt-br/wiki/Bulbasaur">
+                <a href="https://pokedex-br.fandom.com/pt-br/wiki/Bulbasaur" target="noopener">
                     <span>Bulbasaur</span>
                     <span>#001</span>
                 </a>
@@ -47,7 +47,7 @@
 
         <li class="cartao-pokemon bggrama">
             <div class="informacoes">
-                <a href="https://pokedex-br.fandom.com/pt-br/wiki/Ivysaur">
+                <a href="https://pokedex-br.fandom.com/pt-br/wiki/Ivysaur" target="noopener">
                     <span>Ivysaur</span>
                     <span>#002</span>
                 </a>
@@ -62,7 +62,7 @@
 
         <li class="cartao-pokemon bggrama">
             <div class="informacoes">
-                <a href="https://pokedex-br.fandom.com/pt-br/wiki/Venusaur">
+                <a href="https://pokedex-br.fandom.com/pt-br/wiki/Venusaur" target="noopener">
                     <span>Venusaur</span>
                     <span>#003</span>
                 </a>
@@ -76,7 +76,7 @@
 
             <li class="cartao-pokemon bgfogo">
                 <div class="informacoes">
-                    <a href="https://pocketmonster.fandom.com/pt-br/wiki/Charmander">
+                    <a href="https://pocketmonster.fandom.com/pt-br/wiki/Charmander" target="noopener">
                         <span>Charmander</span>
                         <span>#004</span>
                     </a>
@@ -90,7 +90,7 @@
 
             <li class="cartao-pokemon bgfogo">
                 <div class="informacoes">
-                    <a href="https://pocketmonster.fandom.com/pt-br/wiki/Charmeleon">
+                    <a href="https://pocketmonster.fandom.com/pt-br/wiki/Charmeleon" target="noopener">
                         <span>Charmeleon</span>
                         <span>#005</span>
                     </a>
@@ -104,7 +104,7 @@
 
             <li class="cartao-pokemon bgfogo">
                 <div class="informacoes">
-                    <a href="https://pocketmonster.fandom.com/pt-br/wiki/Charizard">
+                    <a href="https://pocketmonster.fandom.com/pt-br/wiki/Charizard" target="noopener">
                         <span>Charizard</span>
                         <span>#006</span>
                     </a>
@@ -118,7 +118,7 @@
 
             <li class="cartao-pokemon bgagua">
                 <div class="informacoes">
-                    <a href="https://pocketmonster.fandom.com/pt-br/wiki/Squirtle">
+                    <a href="https://pocketmonster.fandom.com/pt-br/wiki/Squirtle" target="noopener">
                         <span>Squirtle</span>
                         <span>#007</span>
                     </a>
@@ -132,7 +132,7 @@
 
             <li class="cartao-pokemon bgagua">
                 <div class="informacoes">
-                    <a href="https://pocketmonster.fandom.com/pt-br/wiki/Wartortle">
+                    <a href="https://pocketmonster.fandom.com/pt-br/wiki/Wartortle" target="noopener">
                         <span>Wartortle</span>
                         <span>#008</span>
                     </a>
@@ -146,7 +146,7 @@
 
             <li class="cartao-pokemon bgagua">
                 <div class="informacoes">
-                    <a href="https://pocketmonster.fandom.com/pt-br/wiki/Blastoise">
+                    <a href="https://pocketmonster.fandom.com/pt-br/wiki/Blastoise" target="noopener">
                         <span>Blastoise</span>
                         <span>#009</span>
                     </a>
@@ -160,7 +160,7 @@
 
             <li class="cartao-pokemon bginseto">
                 <div class="informacoes">
-                    <a href="https://pokemon-go.fandom.com/pt-br/wiki/Caterpie">
+                    <a href="https://pokemon-go.fandom.com/pt-br/wiki/Caterpie" target="noopener">
                         <span>Caterpie</span>
                         <span>#010</span>
                     </a>
@@ -174,7 +174,7 @@
 
             <li class="cartao-pokemon bginseto">
                 <div class="informacoes">
-                    <a href="https://pokedex.fandom.com/pt-br/wiki/Metapod">
+                    <a href="https://pokedex.fandom.com/pt-br/wiki/Metapod" target="noopener">
                         <span>Metapod</span>
                         <span>#011</span>
                     </a>
@@ -188,7 +188,7 @@
 
             <li class="cartao-pokemon bginseto">
                 <div class="informacoes">
-                    <a href="https://pokemon-go.fandom.com/pt-br/wiki/Butterfree">
+                    <a href="https://pokemon-go.fandom.com/pt-br/wiki/Butterfree" target="noopener">
                         <span>Butterfree</span>
                         <span>#012</span>
                     </a>
@@ -203,7 +203,7 @@
 
             <li class="cartao-pokemon bginseto">
                 <div class="informacoes">
-                    <a href="https://pokemon-go.fandom.com/pt-br/wiki/Weedle">
+                    <a href="https://pokemon-go.fandom.com/pt-br/wiki/Weedle" target="noopener">
                         <span>Weedle</span>
                         <span>#013</span>
                     </a>
@@ -218,7 +218,7 @@
 
             <li class="cartao-pokemon bginseto">
                 <div class="informacoes">
-                    <a href="https://pokemon-go.fandom.com/pt-br/wiki/Kakuna">
+                    <a href="https://pokemon-go.fandom.com/pt-br/wiki/Kakuna" target="noopener">
                         <span>Kakuna</span>
                         <span>#014</span>
                     </a>
@@ -233,7 +233,7 @@
 
             <li class="cartao-pokemon bginseto">
                 <div class="informacoes">
-                    <a href="https://pokedex.fandom.com/pt-br/wiki/Beedrill">
+                    <a href="https://pokedex.fandom.com/pt-br/wiki/Beedrill" target="noopener">
                         <span>Beedrill</span>
                         <span>#015</span>
                     </a>
