--- a/g2.html
+++ b/g2.html
@@ -33,7 +33,7 @@
 
             <li class="cartao-pokemon bggrama">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/chikorita">
+                    <a href="https://www.pokemon.com/br/pokedex/chikorita" target="noopener">
                         <span>Chicorita</span>
                         <span>#152</span>
                     </a>
@@ -47,7 +47,7 @@
 
             <li class="cartao-pokemon bggrama">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/bayleef">
+                    <a href="https://www.pokemon.com/br/pokedex/bayleef" target="noopener">
                         <span>Bayleef</span>
                         <span>#153</span>
                     </a>
@@ -61,7 +61,7 @@
 
             <li class="cartao-pokemon bggrama">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/meganium">
+                    <a href="https://www.pokemon.com/br/pokedex/meganium" target="noopener">
                         <span>Meganium</span>
                         <span>#154</span>
                     </a>
@@ -75,7 +75,7 @@
 
             <li class="cartao-pokemon bgfogo">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/cyndaquil">
+                    <a href="https://www.pokemon.com/br/pokedex/cyndaquil" target="noopener">
                         <span>Cyndaquil</span>
                         <span>#155</span>
                     </a>
@@ -89,7 +89,7 @@
 
             <li class="cartao-pokemon bgfogo">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/quilava">
+                    <a href="https://www.pokemon.com/br/pokedex/quilava" target="noopener">
                         <span>Quilava</span>
                         <span>#156</span>
                     </a>
@@ -103,7 +103,7 @@
 
             <li class="cartao-pokemon bgfogo">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/typhlosion">
+                    <a href="https://www.pokemon.com/br/pokedex/typhlosion" target="noopener">
                         <span>Typhlosion</span>
                         <span>#157</span>
                     </a>
@@ -117,7 +117,7 @@
 
             <li class="cartao-pokemon bgagua">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/totodile">
+                    <a href="https://www.pokemon.com/br/pokedex/totodile" target="noopener">
                         <span>Totodile</span>
                         <span>#158</span>
                     </a>
@@ -131,7 +131,7 @@
 
             <li class="cartao-pokemon bgagua">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/croconaw">
+                    <a href="https://www.pokemon.com/br/pokedex/croconaw" target="noopener">
                         <span>Croconaw</span>
                         <span>#159</span>
                     </a>
@@ -145,7 +145,7 @@
 
             <li class="cartao-pokemon bgagua">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/feraligatr">
+                    <a href="https://www.pokemon.com/br/pokedex/feraligatr" target="noopener">
                         <span>Feraligatr</span>
                         <span>#160</span>
                     </a>
@@ -159,7 +159,7 @@
 
             <li class="cartao-pokemon bgnormal">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/sentret">
+                    <a href="https://www.pokemon.com/br/pokedex/sentret" target="noopener">
                         <span>Sentret</span>
                         <span>#161</span>
                     </a>
@@ -173,7 +173,7 @@
 
             <li class="cartao-pokemon bgnormal">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/furret">
+                    <a href="https://www.pokemon.com/br/pokedex/furret" target="noopener">
                         <span>Furret</span>
                         <span>#162</span>
                     </a>
@@ -187,7 +187,7 @@
 
             <li class="cartao-pokemon bgvoador">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/hoothoot">
+                    <a href="https://www.pokemon.com/br/pokedex/hoothoot" target="noopener">
                         <span>Hoothoot</span>
                         <span>#163</span>
                     </a>
@@ -202,7 +202,7 @@
 
             <li class="cartao-pokemon bgvoador">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/noctowl">
+                    <a href="https://www.pokemon.com/br/pokedex/noctowl" target="noopener">
                         <span>Noctowl</span>
                         <span>#164</span>
                     </a>
@@ -217,7 +217,7 @@
 
             <li class="cartao-pokemon bginseto">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/ledyba">
+                    <a href="https://www.pokemon.com/br/pokedex/ledyba" target="noopener">
                         <span>Ledyba</span>
                         <span>#165</span>
                     </a>
@@ -232,7 +232,7 @@
 
             <li class="cartao-pokemon bginseto">
                 <div class="informacoes">
-                    <a href="https://www.pokemon.com/br/pokedex/ledian">
+                    <a href="https://www.pokemon.com/br/pokedex/ledian" target="noopener">
                         <span>Ledian</span>
                         <span>#166</span>
                     </a>
